# play-fishing-frenzy

./: .gitattributes  CONFIG.md  QUICKSTART.md  README.md  SKILL.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
ff_agent/: api_client.py  auth.py  diving_client.py  fishing_client.py  server.py  state.py  strategy.py  wallet.py
play-fishing-frenzy/: .mcp.json  CONFIG.md  QUICKSTART.md  SKILL.md  requirements.txt
play-fishing-frenzy/ff_agent/: api_client.py  chain.py  diving_client.py  fishing_client.py  server.py  state.py
play-fishing-frenzy/references/: chests.md  collecting.md  cooking.md  diving.md  equipment.md  fishing.md  leaderboards.md  quests.md  token.md
play-fishing-frenzy/scripts/: bootstrap.sh  setup.sh  setup_preferences.py  status.py
references/: cooking.md  diving.md  economy.md  equipment.md  fishing.md  quests.md
scripts/: read_config.py  setup.sh
tests/: conftest.py  helpers.py  test_01_setup.py  test_02_core_loop.py  test_03_edge_cases.py  test_04_diving.py  test_13_strategy_decisions.py  test_16_strategy_benchmark.py  test_17_config_and_tools.py
