[project]
name = "play-fishing-frenzy"
version = "1.0.0"
description = "Autonomous AI agent for Fishing Frenzy — fish, cook, dive, and optimize on Ronin blockchain"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Uncharted Games" }]
keywords = ["fishing-frenzy", "web3", "game-agent", "ronin", "mcp", "claude-code"]

[project.urls]
Homepage = "https://fishingfrenzy.co"
Repository = "https://github.com/wearedayone/play-fishing-frenzy"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "diving: requires level 30+",
    "live: test requires a live API connection",
]
timeout = 60
addopts = "-v --tb=long -s"
